--- a/apps/account-api/api.html
+++ b/apps/account-api/api.html
@@ -657,7 +657,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/account-api/commit/c7541d1ca0f52e375bc657f5bf8288eb5fcd25fd">28 Apr 2021</a>
+  Last updated: <a href="https://github.com/alphagov/account-api/commit/a588560609c8c17a4d6ce7164571bafb8e879a8f">5 May 2021</a>
 </div>
 
   <h1 class="page-title">account-api: API documentation</h1>
@@ -838,6 +838,12 @@ end
 <p>This URL should be served to the user with a 302 response to authenticate the user against the identity provider.</p>
 <h4 id="query-parameters">Query parameters</h4>
 <ul>
+<li>
+<code>level_of_authentication</code> <em>(optional)</em>
+<ul>
+<li>either <code>level1</code> (require MFA) or <code>level0</code> (do not require MFA, the default)</li>
+</ul>
+</li>
 <li>
 <code>state_id</code> <em>(optional)</em>
 <ul>
