--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/fc-barcelona-v-manchester-city-fc-travel-advice--2">FC Barcelona v Manchester City FC travel advice</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/271974.es-419">Concluye exitosamente la Visita Real en Monterrey</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/269087.es-419">Servicio del Día del Recuerdo —Remembrance Sunday— de la Embajada Británica en la Ciudad de México</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-provides-english-classes-to-costa-rican-police-officers--2">British Embassy provides English classes to Costa Rican Police Officers</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-islands-post-cabinet-statement--2">Turks and Caicos Islands Post Cabinet Statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/271980.es-419">Resumen de la Visita Real del Príncipe de Gales y la Duquesa de Cornwall a México</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/283719.es-419">Fiscal de la Nación recibió al Crown Prosecution Service</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/promoting-british-values-in-kazakhstan--2">Promoting British values in Kazakhstan</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/197856.zh-tw">世界反死刑日</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/high-level-uk-ghana-partnership-to-boost-trade-and-jobs">High Level UK-Ghana partnership to boost trade and jobs</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-human-rights-and-democracy-fund-bid-round-2014-2015--2">The Human Rights and Democracy Fund - Bid Round 2014-2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/death-of-nelson-mandela">Death of Nelson Mandela</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/national-strategy-for-maritime-security">National Strategy for Maritime Security</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--4">British expatriates - “It’s your vote, don’t lose it”</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/fintech-week-2016-report-finds-britain-to-be-the-worlds-leading-fintech-centre">Fintech Week 2016: report finds Britain to be the world&rsquo;s leading FinTech centre</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--6">Turks and Caicos post Cabinet Update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/stay-in-touch-with-us-through-social-media--2">Stay in touch with us through social media</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/eu-member-states-embassies-mark-climate-change-day-in-tashkent">EU Member States’ embassies mark Climate Change Day in Tashkent</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/telephone-lines-out-of-order-at-the-british-embassy-in-havana">Telephone connection restored at the British Embassy in Havana</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
